Add a reference to the specific page in Sommerfeld's book.

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -61,7 +61,7 @@
 \vs p041 6:1 In deciphering spectral phenomena, it should be remembered that space is not empty; that light, in traversing space, is sometimes slightly modified by the various forms of energy and matter which circulate in all organized space. Some of the lines indicating unknown matter which appear in the spectra of your sun are due to modifications of well\hyp{}known elements which are floating throughout space in shattered form, the atomic casualties of the fierce encounters of the solar elemental battles. Space is pervaded by these wandering derelicts, especially sodium and calcium.
 \vs p041 6:2 Calcium is, in fact, the chief element of the matter\hyp{}permeation of space throughout Orvonton. Our whole superuniverse is sprinkled with minutely pulverized stone. Stone is literally the basic building matter for the planets and spheres of space. The cosmic cloud, the great space blanket, consists for the most part of the modified atoms of calcium. The stone atom is one of the most prevalent and persistent of the elements. It not only endures solar ionization --- splitting --- but persists in an associative identity even after it has been battered by the destructive X\hyp{}rays and shattered by the high solar temperatures. Calcium possesses an individuality and a longevity excelling all of the more common forms of matter.
 \vs p041 6:3 \pc As your physicists have suspected, these mutilated remnants of solar calcium literally ride the light beams for varied distances, and thus their widespread dissemination throughout space is tremendously facilitated. The sodium atom, under certain modifications, is also capable of light and energy locomotion. The calcium feat is all the more remarkable since this element has almost twice the mass of sodium. Local space\hyp{}permeation by calcium is due to the fact that it escapes from the solar photosphere, in modified form, by literally riding the outgoing sunbeams. Of all the solar elements, calcium, notwithstanding its comparative bulk --- containing as it does 20 revolving electrons --- is the most successful in escaping from the solar interior to the realms of space. This explains why there is a calcium layer, a gaseous stone surface, on the sun 9,600\,km thick; and this despite the fact that 19 lighter elements, and numerous heavier ones, are underneath.
-\vs p041 6:4 Calcium is an active and versatile element at solar temperatures. The stone atom has two agile and loosely attached electrons in the two outer electronic circuits, which are very close together. Early in the atomic struggle it loses its outer electron; whereupon it engages in a masterful act of juggling the 19\ts{th} electron back and forth between the 19\ts{th} and 20\ts{th} circuits of electronic revolution. By tossing this 19\ts{th} electron\fnst{Perhaps this peculiarity is connected to the well-known (see \cite{Sommerfeld1}) anomaly of the 19\ts{th} electron in neutral $K$ and ionised $Ca^+$, which ``prematurely'' occupies the $N_I$ subgroup instead of the $M_{IV}+M_V$ subgroup as predicted by the idealised model and actually observed starting from the nucleus charge of $Z=21$, i.e. in $Sc^{++}$ and $Ti^{+++}$?} back and forth between its own orbit and that of its lost companion more than 25,000 times a second, a mutilated stone atom is able partially to defy gravity and thus successfully to ride the emerging streams of light and energy, the sunbeams, to liberty and adventure. This calcium atom moves outward by alternate jerks of forward propulsion, grasping and letting go the sunbeam about 25,000 times each second. And this is why stone is the chief component of the worlds of space. Calcium is the most expert solar\hyp{}prison escaper.
+\vs p041 6:4 Calcium is an active and versatile element at solar temperatures. The stone atom has two agile and loosely attached electrons in the two outer electronic circuits, which are very close together. Early in the atomic struggle it loses its outer electron; whereupon it engages in a masterful act of juggling the 19\ts{th} electron back and forth between the 19\ts{th} and 20\ts{th} circuits of electronic revolution. By tossing this 19\ts{th} electron\fnst{Could this peculiarity be connected to the well-known (see \cite{Sommerfeld1}, p.~160) anomaly of the 19\ts{th} electron in neutral $K$ and ionised $Ca^+$, which ``prematurely'' occupies the $N_I$ subgroup instead of the $M_{IV}+M_V$ subgroup as predicted by the idealised model and actually observed starting from the nucleus charge of $Z=21$, i.e. in $Sc^{++}$ and $Ti^{+++}$?} back and forth between its own orbit and that of its lost companion more than 25,000 times a second, a mutilated stone atom is able partially to defy gravity and thus successfully to ride the emerging streams of light and energy, the sunbeams, to liberty and adventure. This calcium atom moves outward by alternate jerks of forward propulsion, grasping and letting go the sunbeam about 25,000 times each second. And this is why stone is the chief component of the worlds of space. Calcium is the most expert solar\hyp{}prison escaper.
 \vs p041 6:5 The agility of this acrobatic calcium electron is indicated by the fact that, when tossed by the temperature\hyp{}X\hyp{}ray solar forces to the circle of the higher orbit, it only remains in that orbit for about $10^{-6}$ seconds; but before the electric\hyp{}gravity power of the atomic nucleus pulls it back into its old orbit, it is able to complete 1,000,000 revolutions about the atomic centre.
 \vs p041 6:6 \pc Your sun has parted with an enormous quantity of its calcium, having lost tremendous amounts during the times of its convulsive eruptions in connection with the formation of the solar system. Much of the solar calcium is now in the outer crust of the sun.
 \vs p041 6:7 \pc It should be remembered that spectral analyses show only sun\hyp{}surface compositions. For example: Solar spectra exhibit many iron lines, but iron is not the chief element in the sun. This phenomenon is almost wholly due to the present temperature of the sun’s surface, a little less than 6,000\,°C, this temperature being very favourable to the registry of the iron spectrum.
