--- a/tex/p077.tex
+++ b/tex/p077.tex
@@ -50,7 +50,7 @@
 \vs p077 4:5 After the establishment of the second garden it was customary to allude to this near-by Nodite settlement as “the land of Nod”; and during the long period of relative peace between this Nodite group and the Adamites, the two races were greatly blended, for it became more and more the custom for the Sons of God (the Adamites) to intermarry with the daughters of men (the Nodites).
 \vs p077 4:6 \ublistelem{3.}\bibnobreakspace \bibemph{The central or pre\hyp{}Sumerian Nodites.} A small group at the mouth of the Tigris and Euphrates rivers maintained more of their racial integrity. They persisted for thousands of years and eventually furnished the Nodite ancestry which blended with the Adamites to found the Sumerian peoples of historic times.
 \vs p077 4:7 And all this explains how the Sumerians appeared so suddenly and mysteriously on the stage of action in Mesopotamia. Investigators will never be able to trace out and follow these tribes back to the beginning of the Sumerians, who had their origin 200,000 years ago after the submergence of Dalamatia. Without a trace of origin elsewhere in the world, these ancient tribes suddenly loom upon the horizon of civilization with a full\hyp{}grown and superior culture, embracing temples, metalwork, agriculture, animals, pottery, weaving, commercial law, civil codes, religious ceremonial, and an old system of writing. At the beginning of the historical era they had long since lost the alphabet of Dalamatia, having adopted the peculiar writing system originating in Dilmun. The Sumerian language, though virtually lost to the world, was not Semitic; it had much in common with the so\hyp{}called Aryan tongues.
-\vs p077 4:8 The elaborate records left by the Sumerians describe the site of a remarkable settlement which was located on the Persian Gulf near the earlier city of Dilmun. The Egyptians called this city of ancient glory Dilmat, while the later Adamized Sumerians confused both the first and second Nodite cities with Dalamatia and called all three Dilmun. And already have archaeologists found these ancient Sumerian clay tablets which tell of this earthly paradise “where the Gods first blessed mankind with the example of civilized and cultured life.” And these tablets, descriptive of Dilmun, the paradise of men and God, are now silently resting on the dusty shelves of many museums.
+\vs p077 4:8 The elaborate records left by the Sumerians describe the site of a remarkable settlement which was located on the Persian Gulf near the earlier city of Dilmun. The Egyptians called this city of ancient glory Dilmat, while the later Adamized Sumerians confused both the first and second Nodite cities with Dalamatia and called all three Dilmun. And already have archaeologists found these ancient Sumerian clay tablets which tell of this earthly paradise “where the Gods first blessed mankind with the example of civilized and cultured life.”\fnst{On p.~95 of \cite{Peake1} we read: ``Langdon has pointed out that `the Sumerian legends locate the land of Paradise, where the gods first blessed mankind with manners of civilized life, in Dilmun on the shore of the Persian Gulf'. It is not quite clear on which side of the Gulf Dilmun lay, but the area between the foot of the Iranian plateau and the Gulf is a fertile region, well fitted for the rise of a settled civilization.''} And these tablets, descriptive of Dilmun, the paradise of men and God, are now silently resting on the dusty shelves of many museums.
 \vs p077 4:9 The Sumerians well knew of the first and second Edens but, despite extensive intermarriage with the Adamites, continued to regard the garden dwellers to the north as an alien race. Sumerian pride in the more ancient Nodite culture led them to ignore these later vistas of glory in favour of the grandeur and paradisiacal traditions of the city of Dilmun.
 \vs p077 4:10 \ublistelem{4.}\bibnobreakspace \bibemph{The northern Nodites and Amadonites --- the Vanites.} This group arose prior to the Bablot conflict. These northernmost Nodites were descendants of those who had forsaken the leadership of Nod and his successors for that of Van and Amadon.
 \vs p077 4:11 \pc Some of the early associates of Van subsequently settled about the shores of the lake which still bears his name, and their traditions grew up about this locality. Ararat became their sacred mountain, having much the same meaning to later\hyp{}day Vanites that Sinai had to the Hebrews. 10,000 years ago the Vanite ancestors of the Assyrians taught that their moral law of seven commandments had been given to Van by the Gods upon Mount Ararat. They firmly believed that Van and his associate Amadon were taken alive from the planet while they were up on the mountain engaged in worship.
@@ -113,3 +113,11 @@
 \vsetoff
 \vs p077 9:13 [Presented by an Archangel of Nebadon.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
+\begin{thebibliography}{100}
+\bibitem{Peake1}
+Harold Peake \&\ Herbert John Fleure.
+{``The Corridors of Time III: Peasants \&\ Potters.''}
+{\em Oxford: Clarendon Press}, 1927.
+\end{thebibliography}
+}
